--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -32,6 +32,7 @@ user.password: Senha
 user.status: Status
 user.enabled: Habilitado
 user.disabled: Desabilitado
+user.locked: Bloqueado
 permissions: Permissões
 role.administrator: Administrador
 role.user: Usuário
