--- a/app/Resources/translations/messages.bg.yml
+++ b/app/Resources/translations/messages.bg.yml
@@ -32,6 +32,7 @@ user.password: Парола
 user.status: Статус
 user.enabled: Разреши
 user.disabled: Изключи
+user.locked: Заключен
 permissions: Права
 role.administrator: Администратор
 role.user: Потребител
