--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -32,6 +32,7 @@ user.password: Heslo
 user.status: Status
 user.enabled: Povoleno
 user.disabled: Zakázáno
+user.locked: Zamčený
 permissions: Práva
 role.administrator: Administrátor
 role.user: Uživatel
