--- a/app/Resources/translations/messages.ro.yml
+++ b/app/Resources/translations/messages.ro.yml
@@ -32,6 +32,7 @@ user.password: Parola
 user.status: Stare
 user.enabled: Activate
 user.disabled: Dezactivate
+user.locked: Blocat
 permissions: Permisiuni
 role.administrator: Administrator
 role.user: Utilizator
