--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -22,7 +22,9 @@ security.log_out: Esci
 security.remember_me: Ricordami
 security.session_expired: 'La tua sessione è scaduta. Effettua nuovamente il login.'
 security.confirm_exit: 'Vuoi davvero uscire?'
-'Bad credentials.': 'Nome utente non riconosciuto o password errata.'
+'Bad credentials': 'Nome utente non riconosciuto o password errata.'
+'User account is disabled.': 'L''account è disabilitato.'
+'User account is locked.': 'L''account è stato bloccato.'
 administration: Amministrazione
 users: Utenti
 user.username: 'Nome utente'
