--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -22,7 +22,9 @@ security.log_out: 'Logga ut'
 security.remember_me: 'Förbli inloggad'
 security.session_expired: 'Din session har gått ut. Vänligen logga in på nytt.'
 security.confirm_exit: 'Är du säker på att du vill avsluta?'
-'Bad credentials.': 'Okänt användarnamn eller felaktigt lösenord.'
+'Bad credentials': 'Okänt användarnamn eller felaktigt lösenord.'
+'User account is disabled.': 'Kontot är inaktiverat.'
+'User account is locked.': 'Kontot är låst.'
 administration: Administration
 users: Användare
 user.username: Användarnamn
