--- a/app/Resources/translations/messages.bg.yml
+++ b/app/Resources/translations/messages.bg.yml
@@ -22,7 +22,9 @@ security.log_out: Изход
 security.remember_me: 'Запомни ме'
 security.session_expired: 'Вашата сесия е изтекла. Моля влезете отново.'
 security.confirm_exit: 'Сигурен ли сте че искате да излезнете?'
-'Bad credentials.': 'Неизвестно потребителско име или сгрешена парола.'
+'Bad credentials': 'Неизвестно потребителско име или сгрешена парола.'
+'User account is disabled.': 'Акаунтът е изключен.'
+'User account is locked.': 'Акаунтът е заключен.'
 administration: Администрация
 users: Потребители
 user.username: 'Потребителско име'
