--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -22,7 +22,9 @@ security.log_out: Odhlásit
 security.remember_me: 'Zůstat přihlášený'
 security.session_expired: 'Vaše sezení vypršelo. Znovu se přihlaste, prosím.'
 security.confirm_exit: 'Jste si jisti, že se chcete odhlásit?'
-'Bad credentials.': 'Neznámé uživatelské jméno nebo chybné heslo.'
+'Bad credentials': 'Neznámé uživatelské jméno nebo chybné heslo.'
+'User account is disabled.': 'Účet je zablokován.'
+'User account is locked.': 'Účet je uzamčen.'
 administration: Administrace
 users: Uživatelé
 user.username: 'Uživatelské jméno'
