--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -22,7 +22,9 @@ security.log_out: Abmelden
 security.remember_me: 'Angemeldet bleiben'
 security.session_expired: 'Ihre Sitzung ist abgelaufen. Bitte melden Sie sich erneut an.'
 security.confirm_exit: 'Möchten Sie wirklich beenden?'
-'Bad credentials.': 'Unbekannter Benutzername oder falsches Passwort.'
+'Bad credentials': 'Unbekannter Benutzername oder falsches Passwort.'
+'User account is disabled.': 'Konto ist deaktiviert.'
+'User account is locked.': 'Konto ist gesperrt.'
 administration: Administration
 users: Benutzer
 user.username: Benutzername
