--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -22,7 +22,9 @@ security.log_out: Salir
 security.remember_me: 'Mantener la sesión abierta'
 security.session_expired: 'Su sesión ha expirado. Por favor, vuelva a identificarse.'
 security.confirm_exit: '¿Está seguro de salir?'
-'Bad credentials.': 'Nombre de usuario desconocido o contraseña incorrecta.'
+'Bad credentials': 'Nombre de usuario desconocido o contraseña incorrecta.'
+'User account is disabled.': 'Cuenta deshabilitada.'
+'User account is locked.': 'Cuenta bloqueada.'
 administration: Administración
 users: Usuarios
 user.username: 'Nombre de usuario'
