--- a/app/Resources/translations/messages.ro.yml
+++ b/app/Resources/translations/messages.ro.yml
@@ -27,10 +27,14 @@ security.confirm_exit: 'Sunteti sigur ca doriti sa iesiti?'
 'User account is locked.': 'Contuleste blocat.'
 administration: Administrare
 users: Utilizatori
+user.user_new: 'Utilizator nou'
 user.username: 'Nume utilizator'
 user.fullname: 'Nume si prenume'
 user.email: Email
 user.password: Parola
+user.new_password: 'Parola nouă'
+user.password_confirmation: Confirmare
+user.change_password: 'Schimbare parolă'
 user.status: Stare
 user.enabled: Activate
 user.disabled: Dezactivate
@@ -39,3 +43,5 @@ permissions: Permisiuni
 role.administrator: Administrator
 role.user: Utilizator
 description: Descriere
+user.conflict.username: 'Numele de utilizator este deja folosit.'
+passwords.dont.match: 'Parola nu este identica.'
