--- a/app/Resources/translations/messages.ja.yml
+++ b/app/Resources/translations/messages.ja.yml
@@ -44,4 +44,5 @@ role.administrator: システム管理者
 role.user: ユーザー
 description: 説明
 user.conflict.username: 入力されたユーザーの名前は既に存在しています。
+password.too.short: 'パスワードは最低 %length% 文字以上である必要があります。'
 passwords.dont.match: パスワードが一致しません。
