--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -44,4 +44,5 @@ role.administrator: Administrator
 role.user: Benutzer
 description: Beschreibung
 user.conflict.username: 'Ein Konto mit diesem Benutzernamen existiert bereits.'
+password.too.short: 'Das Passwort muss mindestens %length% Zeichen lang sein.'
 passwords.dont.match: 'Die Passwörter stimmen nicht überein.'
