--- a/app/Resources/translations/messages.ru.yml
+++ b/app/Resources/translations/messages.ru.yml
@@ -44,4 +44,5 @@ role.administrator: Администратор
 role.user: Пользователь
 description: Описание
 user.conflict.username: 'Учетная запись с таким именем пользователя уже существует.'
+password.too.short: 'Пароль должен содержать как минимум %length% символов.'
 passwords.dont.match: 'Пароли не совпадают.'
