--- a/app/Resources/translations/messages.tr.yml
+++ b/app/Resources/translations/messages.tr.yml
@@ -44,4 +44,5 @@ role.administrator: Yönetici
 role.user: Kullanıcı
 description: Yorum
 user.conflict.username: 'Girilen kullanıcı adıyla bir hesap zaten var.'
+password.too.short: 'Parola en az %length% karakter uzunluğunda olmalıdır.'
 passwords.dont.match: 'Parolalar uyuşmuyor.'
