--- a/app/Resources/translations/messages.bg.yml
+++ b/app/Resources/translations/messages.bg.yml
@@ -43,6 +43,7 @@ permissions: Права
 role.administrator: Администратор
 role.user: Потребител
 description: Описание
+user.confirm.delete: 'Сигурен ли сте че искате да изтриете този акаунт?'
 user.conflict.username: 'Акаунт с въведенето потребителско име вече съществува.'
 password.too.short: 'Паролата трябва да е най-малко с %length% символ дължина.'
 passwords.dont.match: 'Паролите не са еднакви.'
