--- a/app/Resources/translations/messages.lv.yml
+++ b/app/Resources/translations/messages.lv.yml
@@ -43,6 +43,7 @@ permissions: Atļaujas
 role.administrator: Administrators
 role.user: Lietotājs
 description: Apraksts
+user.confirm.delete: 'Vai tiešām vēlaties dzēst šo kontu?'
 user.conflict.username: 'Lietotāja konts ar tādu lietotāja vārdu jau eksistē.'
 password.too.short: 'Parolei jāsatur vismaz %length% simbolu.'
 passwords.dont.match: 'Paroles nesakrīt.'
