--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -43,6 +43,7 @@ permissions: Behörigheter
 role.administrator: Administratör
 role.user: Användare
 description: Beskrivning
+user.confirm.delete: 'Är du säker på att du vill ta bort detta kontot?'
 user.conflict.username: 'Kontot med detta användarnamn finns redan.'
 password.too.short: 'Lösenord ska vara minst %length% tecken långt.'
 passwords.dont.match: 'Lösenorden matchar inte.'
