--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -43,6 +43,7 @@ permissions: Práva
 role.administrator: Administrátor
 role.user: Uživatel
 description: Popis
+user.confirm.delete: 'Jste si jisti, že chcete smazat tento účet?'
 user.conflict.username: 'Účet se zadaným uživatelským jménem již existuje.'
 password.too.short: 'Heslo musí být dlouhé alespoň %length% znaků.'
 passwords.dont.match: 'Hesla se neshodují.'
