--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -43,6 +43,7 @@ permissions: Permissions
 role.administrator: Administrateur
 role.user: Utilisateur
 description: Description
+user.confirm.delete: 'Etes-vous sur de vouloir effacer ce compte?'
 user.conflict.username: 'Il existe déjà un compte portant ce nom.'
 password.too.short: 'Le mot de passe doit comporter au moins %length% caracteres.'
 passwords.dont.match: 'Les mots de passe ne correspondent pas.'
