--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -43,6 +43,7 @@ permissions: Permessi
 role.administrator: Amministratore
 role.user: Utente
 description: Descrizione
+user.confirm.delete: 'Eliminare questo account?'
 user.conflict.username: 'Nome utente già utilizzato.'
 password.too.short: 'La password deve essere almeno lunga %length% caratteri.'
 passwords.dont.match: 'Le password non coincidono.'
