--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -43,6 +43,7 @@ permissions: Permissies
 role.administrator: Beheerder
 role.user: Gebruiker
 description: Beschrijving
+user.confirm.delete: 'Ben je zeker dat je deze account wilt verwijderen?'
 user.conflict.username: 'Account met ingevoerde naam bestaat reeds.'
 password.too.short: 'Wachtwoord moet tenminste %length% tekens bevatten.'
 passwords.dont.match: 'Wachtwoorden stemmen niet overeen.'
