--- a/app/Resources/translations/messages.ru.yml
+++ b/app/Resources/translations/messages.ru.yml
@@ -43,6 +43,7 @@ permissions: 'Права доступа'
 role.administrator: Администратор
 role.user: Пользователь
 description: Описание
+user.confirm.delete: 'Вы уверены, что хотите удалить эту учетную запись?'
 user.conflict.username: 'Учетная запись с таким именем пользователя уже существует.'
 password.too.short: 'Пароль должен содержать как минимум %length% символов.'
 passwords.dont.match: 'Пароли не совпадают.'
