--- a/app/Resources/translations/messages.tr.yml
+++ b/app/Resources/translations/messages.tr.yml
@@ -43,6 +43,7 @@ permissions: İzinler
 role.administrator: Yönetici
 role.user: Kullanıcı
 description: Yorum
+user.confirm.delete: 'Bu hesabı silmek istediğinizden emin misiniz?'
 user.conflict.username: 'Girilen kullanıcı adıyla bir hesap zaten var.'
 password.too.short: 'Parola en az %length% karakter uzunluğunda olmalıdır.'
 passwords.dont.match: 'Parolalar uyuşmuyor.'
