--- a/app/Resources/translations/messages.tr.yml
+++ b/app/Resources/translations/messages.tr.yml
@@ -22,6 +22,7 @@ security.log_out: Çıkış
 security.remember_me: 'Sürekli bağlı kal'
 security.session_expired: 'Oturum zaman aşımına uğradı. Lütfen tekrar giriş yapın.'
 security.confirm_exit: 'Çıkmak istediğinizden emin misiniz?'
+security.authentication: 'Kimlik Denetimi'
 'Bad credentials': 'Bilinmeyen kullanıcı adı ya da yanlış parola.'
 'User account is disabled.': 'Hesap kapalı.'
 'User account is locked.': 'Hesap kilitli.'
