--- a/app/Resources/translations/messages.hu.yml
+++ b/app/Resources/translations/messages.hu.yml
@@ -22,6 +22,7 @@ security.log_out: Kijelentkezés
 security.remember_me: 'Emlékezzen rám'
 security.session_expired: 'Your session has expired. Please login again.'
 security.confirm_exit: 'Biztos ki szeretne lépni?'
+security.authentication: Azonosítás
 'Bad credentials': 'Ismeretlen felhasználónév vagy rossz jelszó.'
 'User account is disabled.': 'A felhasználót letiltották.'
 'User account is locked.': 'A felhasználó ki lett zárva a rendszerből.'
