--- a/app/Resources/translations/messages.ja.yml
+++ b/app/Resources/translations/messages.ja.yml
@@ -22,6 +22,7 @@ security.log_out: 終了
 security.remember_me: ログインを維持
 security.session_expired: セッションが失効しました。ログインし直してください。
 security.confirm_exit: 終了してログアウトしますか？
+security.authentication: 認証
 'Bad credentials': 不明なユーザー名または誤ったパスワードです。
 'User account is disabled.': アカウントは無効化されています。
 'User account is locked.': アカウントはロックアウトされています。
