--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -22,6 +22,7 @@ security.log_out: Wyloguj
 security.remember_me: 'Pozostań zalogowany'
 security.session_expired: 'Twoja sesja wygasła. Zaloguj się ponownie.'
 security.confirm_exit: 'Czy jesteś pewien, że chesz wyjść?'
+security.authentication: Uwierzytelnianie
 'Bad credentials': 'Nieprawidłowa nazwa użytkownika lub hasła.'
 'User account is disabled.': 'Konto jest wyłączone.'
 'User account is locked.': 'Konto jest zablokowane.'
