--- a/app/Resources/translations/messages.ro.yml
+++ b/app/Resources/translations/messages.ro.yml
@@ -22,6 +22,7 @@ security.log_out: Iesire
 security.remember_me: 'Păstrează autentificarea'
 security.session_expired: 'Your session has expired. Please login again.'
 security.confirm_exit: 'Sunteti sigur ca doriti sa iesiti?'
+security.authentication: Autentificare
 'Bad credentials': 'Cont inexistent sau parola incorecta.'
 'User account is disabled.': 'Contul este dezactivat.'
 'User account is locked.': 'Contuleste blocat.'
